--- a/fund-net-irr-by-geo/fund-net-irr-by-geo.ipynb
+++ b/fund-net-irr-by-geo/fund-net-irr-by-geo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 342,
    "source": [
     "import pandas as pd\r\n",
     "import numpy as np\r\n",
@@ -15,17 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
-   "source": [
-    "def read_file(file_name, sheet_name):\r\n",
-    "    return pd.read_excel(file_name, sheet_name)  "
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 343,
    "source": [
     "folder_name =\"C:/Users/iaw/Desktop/Second Training Task/Input/\"\r\n",
     "fund_investment_summary_file_name = folder_name +\"CEPRES_Platform_Fund_CEPRES_Example_Portfolio_Investment_Summary_USD_($)_Net.xlsx\"\r\n",
@@ -36,12 +26,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 344,
    "source": [
+    "'''\r\n",
+    "    This function for reading excel sheet\r\n",
+    "'''\r\n",
+    "def read_file(file_name, sheet_name):\r\n",
+    "    return pd.read_excel(file_name, sheet_name)  "
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 345,
+   "source": [
+    "'''\r\n",
+    "    load investment summary file and filp the rows to columns vica versa\r\n",
+    "'''\r\n",
     "def load_investment_summary_file(fund_investment_summary_file_name, sheet_name):\r\n",
     "    investment_sumary_df = read_file(fund_investment_summary_file_name,sheet_name)\r\n",
     "    investment_sumary_df = investment_sumary_df.T\r\n",
-    "\r\n",
     "    new_coulmns = list(investment_sumary_df.iloc[0].values)\r\n",
     "    investment_sumary_df.columns = new_coulmns\r\n",
     "    investment_sumary_df = investment_sumary_df.iloc[1:, :].reset_index(drop=True)\r\n",
@@ -53,8 +58,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 346,
    "source": [
+    "''''\r\n",
+    "    this for loading mapping sheet and return the country region map\r\n",
+    "\r\n",
+    "'''\r\n",
+    "\r\n",
     "def load_mapping_Ids(mapping_ids_file_name,sheet_name):\r\n",
     "    dfs = read_file(mapping_ids_file_name,sheet_name)\r\n",
     "    new_header = dfs.iloc[0].str.replace('\\n','') #grab the first row for the header\r\n",
@@ -68,8 +78,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 347,
    "source": [
+    "''''\r\n",
+    "    this for generate the first table\r\n",
+    "'''\r\n",
+    "\r\n",
     "def generate_performance_attribution_table(investment_sumary_df,country_region_mapping):\r\n",
     "   \r\n",
     "    investment_sumary_df [\"Region\"]= investment_sumary_df[\"Geographical Focus\"].apply(lambda x : country_region_mapping[x])\r\n",
@@ -92,8 +106,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 348,
    "source": [
+    "'''\r\n",
+    "    generate the second table\r\n",
+    "'''\r\n",
+    "\r\n",
     "def generate_exposure_geographical_focuse_table(investment_sumary_df,country_region_mapping):\r\n",
     "    \r\n",
     "    investment_sumary_df [\"Region\"]= investment_sumary_df[\"Geographical Focus\"].apply(lambda x : country_region_mapping[x])\r\n",
@@ -129,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 349,
    "source": [
     "def convert_to_percentage(x) -> str: \r\n",
     "    if  isinstance(x, str):\r\n",
@@ -145,13 +163,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 350,
    "source": [
     "investment_sumary_df = load_investment_summary_file(fund_investment_summary_file_name,\"Fund Investment Summary\")\r\n",
     "country_region_mapping = load_mapping_Ids(mapping_ids_file_name,\"Country\")\r\n",
-    "print(\"\\t\\t\\t\\tCEPRES Example GP \\n\\t Fund Net IRR by Geographic Focus in USD ($) by % Invested Capital\\n\")\r\n",
+    "print(\"\\t\\t\\t\\tCEPRES Example Protofolio \\n\\t Fund Net IRR by Geographic Focus in USD ($) by % Invested Capital\\n\")\r\n",
     "generate_performance_attribution_table(investment_sumary_df,country_region_mapping)\r\n",
-    "print(\"\\n\\n\\t\\t\\t\\tCEPRES Example GP \\n\\t\\t Fund Net Information in USD ($) by % Invested Capital\\n\")\r\n",
+    "print(\"\\n\\n\\t\\t\\t\\tCEPRES Example Protofolio \\n\\t\\t Fund Net Information in USD ($) by % Invested Capital\\n\")\r\n",
     "generate_exposure_geographical_focuse_table(investment_sumary_df,country_region_mapping)"
    ],
    "outputs": [
@@ -159,17 +177,17 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "\t\t\t\tCEPRES Example GP \n",
+      "\t\t\t\tCEPRES Example Protofolio \n",
       "\t Fund Net IRR by Geographic Focus in USD ($) by % Invested Capital\n",
       "\n",
       "             Region   Funds   Mean Median\n",
-      "0              Asia   7.41%  0.18%  0.18%\n",
-      "1            Europe  25.93%  0.15%  0.15%\n",
-      "2  Northern America  66.67%  0.17%  0.18%\n",
-      "3               All  100.0%  0.16%  0.16%\n",
+      "0              Asia   7.41%  18.0%  18.0%\n",
+      "1            Europe  25.93%  15.0%  15.0%\n",
+      "2  Northern America  66.67%  17.0%  18.0%\n",
+      "3               All  100.0%  16.0%  16.0%\n",
       "\n",
       "\n",
-      "\t\t\t\tCEPRES Example GP \n",
+      "\t\t\t\tCEPRES Example Protofolio \n",
       "\t\t Fund Net Information in USD ($) by % Invested Capital\n",
       "\n",
       "             Region   Funds   Mean  Median    Min     Max\n",
